attached_assets/Pasted--Compiled-in-1690ms-Ready-in-4s-Compiling-Compiled-in-23-6s-Supabase-Client--1758019433764_1758019433766.txt
 ✓ Compiled in 1690ms
 ✓ Ready in 4s
 ○ Compiling / ...
 ✓ Compiled / in 23.6s
Supabase Client: Successfully initialized REAL Supabase client.
 GET / 200 in 24336ms
 ○ Compiling /maya-chat ...
 ✓ Compiled /maya-chat in 5.9s
Credential Utils: Loaded credential formatting utilities
Vertex AI: Checking environment variables...
Project ID: Found
Location: us-central1
Credentials JSON: Found
Credential Utils: Error parsing credentials: SyntaxError: Bad control character in string literal in JSON at position 163
    at JSON.parse (<anonymous>)
    at parseGoogleCredentials (src/ai/credential-utils.ts:43:29)
    at getVertexAI (src/ai/vertex-ai.ts:27:45)
    at [project]/src/ai/vertex-ai.ts [app-rsc] (ecmascript) (src/ai/vertex-ai.ts:55:17)
    at [project]/src/ai/flows/emotional-state-simulation.ts [app-rsc] (ecmascript) (src/ai/flows/emotional-state-simulation.ts:8:0)
    at [project]/.next-internal/server/app/maya-chat/page/actions.js { ACTIONS_MODULE0 => "[project]/src/ai/flows/emotional-state-simulation.ts [app-rsc] (ecmascript)", ACTIONS_MODULE1 => "[project]/src/ai/flows/offline-message-generation.ts [app-rsc] (ecmascript)" } [app-rsc] (server actions loader, ecmascript) <module evaluation> (.next/server/chunks/ssr/[root of the server]__c741842f._.js:816:180)
    at [project]/.next-internal/server/app/maya-chat/page/actions.js { ACTIONS_MODULE0 => "[project]/src/ai/flows/emotional-state-simulation.ts [app-rsc] (ecmascript)", ACTIONS_MODULE1 => "[project]/src/ai/flows/offline-message-generation.ts [app-rsc] (ecmascript)" } [app-rsc] (server actions loader, ecmascript) (.next/server/chunks/ssr/[root of the server]__c741842f._.js:846:563)
    at Object.<anonymous> (.next/server/app/maya-chat/page.js:16:9)
  41 |     
  42 |     // Parse the JSON
> 43 |     const credentials = JSON.parse(cleanedCredentials);
     |                             ^
  44 |     
  45 |     // Validate required fields
  46 |     const requiredFields = ['type', 'project_id', 'private_key', 'client_email'];
Credential Utils: All parsing methods failed: SyntaxError: Bad control character in string literal in JSON at position 163
    at JSON.parse (<anonymous>)
    at tryAlternativeParsing (src/ai/credential-utils.ts:131:16)
    at parseGoogleCredentials (src/ai/credential-utils.ts:64:11)
    at getVertexAI (src/ai/vertex-ai.ts:27:45)
    at [project]/src/ai/vertex-ai.ts [app-rsc] (ecmascript) (src/ai/vertex-ai.ts:55:17)
    at [project]/src/ai/flows/emotional-state-simulation.ts [app-rsc] (ecmascript) (src/ai/flows/emotional-state-simulation.ts:8:0)
    at [project]/.next-internal/server/app/maya-chat/page/actions.js { ACTIONS_MODULE0 => "[project]/src/ai/flows/emotional-state-simulation.ts [app-rsc] (ecmascript)", ACTIONS_MODULE1 => "[project]/src/ai/flows/offline-message-generation.ts [app-rsc] (ecmascript)" } [app-rsc] (server actions loader, ecmascript) <module evaluation> (.next/server/chunks/ssr/[root of the server]__c741842f._.js:816:180)
    at [project]/.next-internal/server/app/maya-chat/page/actions.js { ACTIONS_MODULE0 => "[project]/src/ai/flows/emotional-state-simulation.ts [app-rsc] (ecmascript)", ACTIONS_MODULE1 => "[project]/src/ai/flows/offline-message-generation.ts [app-rsc] (ecmascript)" } [app-rsc] (server actions loader, ecmascript) (.next/server/chunks/ssr/[root of the server]__c741842f._.js:846:563)
    at Object.<anonymous> (.next/server/app/maya-chat/page.js:16:9)
  129 |     }
  130 |     
> 131 |     return JSON.parse(manualFixed);
      |                ^
  132 |     
  133 |   } catch (error) {
  134 |     console.error('Credential Utils: All parsing methods failed:', error);
Vertex AI: Failed to parse Google credentials
Vertex AI: Implementation loaded with service account authentication
Google AI: Emotional state simulation loaded with direct Google AI implementation
Google AI: Offline message generation loaded with direct Google AI implementation
 GET /maya-chat 200 in 6705ms